--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -34,3 +34,4 @@ $breakpoint-sm: 576px;
 $breakpoint-md: 768px;
 $breakpoint-lg: 992px;
 $breakpoint-xl: 1200px;
+$breakpoint-xxl: 1600px;
